# sub-convert

./: .gitignore  Dockerfile-rocm  README.md  pyproject.toml  zensical.toml
.devcontainer/: Dockerfile
.github/workflows/: publish.yml  ruff-pytest.yml
docs/: index.md  pgs.md  quick-start.md
docs/design/: implementation.md
docs/design/model/: language_model_core.md  ocr_model_core.md  workers.md
docs/design/pgs/: pgs_manager.md  pgs_segments.md  pgs_subtitle_item.md
docs/design/subtitle/: subtitle_group.md  subtitle_track_manager.md  timeline.md
src/sub_convert/: __main__.py  cli.py
src/sub_convert/model/: language_model_core.py  ocr_model_core.py  workers.py
src/sub_convert/pgs/: pgs_manager.py  pgs_segments.py  pgs_subtitle_item.py
src/sub_convert/subtitle/: subtitle_group.py  subtitle_track_manager.py  timeline.py
src/sub_convert2/: __main__.py  cli.py
src/sub_convert2/model/: language_model_core.py  ocr_model_core.py  workers.py
src/sub_convert2/pgs/: pgs_manager.py  pgs_segments.py  pgs_subtitle_item.py
src/sub_convert2/subtitle/: subtitle_group.py  subtitle_track_manager.py  timeline.py
src/sub_convert2/utils/: torch_utils.py  utils.py
tests/: test_main.py  test_subtitle_group.py  test_utils.py
