[project]
name = "sub-convert2"
version = "0.1.0"
description = "convert image-based subtitles to text-based via OCR and language recognition"
readme = "README.md"
authors = [{ name = "leuchthelp", email = "gfpinthehouse@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "langcodes>=3.5.1",
    "lingua-language-detector>=2.2.0",
    "pillow>=12.2.0",
    "pip>=26.1.2",
    "pymkv2>=2.3.2",
    "pysrt>=1.1.2",
    "pytesseract>=0.3.13",
    "rich>=15.0.0",
]

[project.scripts]
sub-convert = "sub_convert2.cli:sub_convert"

[project.optional-dependencies]
cpu = [
    "accelerate>=1.14.0",
    "torch>=2.12.1",
    "torchvision",
    "transformers>=5.12.1",
]
cuda = [
    "accelerate>=1.14.0",
    "torch>=2.12.1",
    "torchvision",
    "transformers>=5.12.1",
]
openvino = [
    "accelerate>=1.14.0",
    "torch>=2.12.1",
    "torchvision",
    "triton-xpu",
    "transformers>=5.12.1",
]
rocm = [
    "accelerate>=1.14.0",
    "torch>=2.12.1",
    "torchvision",
    "triton-rocm",
    "transformers>=5.12.1",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "openvino" },
        { extra = "rocm" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-cuda", extra = "cuda" },
    { index = "torch-openvino", extra = "openvino" },
    { index = "torch-rocm", extra = "rocm" },
]
torchvision = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-cuda", extra = "cuda" },
    { index = "torch-openvino", extra = "openvino" },
    { index = "torch-rocm", extra = "rocm" },
]

triton-rocm = [{ index = "torch-rocm", extra = "rocm" }]
triton-xpu = [{ index = "torch-openvino", extra = "openvino" }]

[tool.uv.workspace]
members = ["sub-convert"]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[[tool.uv.index]]
name = "torch-openvino"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "torch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocstrings-python>=2.0.5",
    "nbstripout>=0.9.1",
    "py7zr>=1.1.3",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "zensical>=0.0.46",
]
